# TheFlexProtocol

./: .gitignore  README.md
firmware/TinyML/Notebook/: emg_ML_pipeline.ipynb  emg_gesture_model.keras  emg_gesture_model.tflite
firmware/esp/: platformio.ini
firmware/esp/lib/ESP32Servo/src/: ESP32PWM.cpp  ESP32PWM.h  ESP32Servo.cpp  ESP32Servo.h
firmware/esp/src/: main.cpp
firmware/esp/test/: test_gesture_recognition.cpp
firmware/nano/: platformio.ini
firmware/nano/lib/pre-demo_project_emg_sensors_inferencing/: library.properties
firmware/nano/lib/pre-demo_project_emg_sensors_inferencing/examples/esp32/esp32_camera/: esp32_camera.ino
firmware/nano/lib/pre-demo_project_emg_sensors_inferencing/examples/esp32/esp32_fusion/: esp32_fusion.ino
firmware/nano/lib/pre-demo_project_emg_sensors_inferencing/examples/esp32/esp32_microphone/: esp32_microphone.ino
firmware/nano/lib/pre-demo_project_emg_sensors_inferencing/examples/esp32/esp32_microphone_continuous/: esp32_microphone_continuous.ino
firmware/nano/lib/pre-demo_project_emg_sensors_inferencing/src/model-parameters/: model_metadata.h  model_variables.h
firmware/nano/lib/pre-demo_project_emg_sensors_inferencing/src/tflite-model/: tflite_learn_1022943_5_compiled.cpp  tflite_learn_1022943_5_compiled.h
firmware/nano/src/: main.cpp
firmware/nano/test/: test_emg.cpp
firmware/pico_w/: CMakeLists.txt  btstack_config.h  hand.hpp  pico_hand_ble.cpp  pico_hand_ble.gatt
firmware/pico_w/pico-servo/src/: pico_servo.c
tools/: emg_edge_impulse_forwarder.ino
(+24 files in other folders)
